Bug 50421 - UI: "Check for Updates" menu leads to an unusable dialog (shows "%PERCENT%")
Summary: UI: "Check for Updates" menu leads to an unusable dialog (shows "%PERCENT%")
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
4.1.4.2 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: BSA target:7.3.0 target:7.2.3
Keywords:
: 72259 83407 85033 97377 104200 106392 117699 118787 (view as bug list)
Depends on:
Blocks: Updates
  Show dependency treegraph
 
Reported: 2012-05-28 03:13 UTC by theirix
Modified: 2021-09-28 12:10 UTC (History)
18 users (show)

See Also:
Crash report or crash signature:


Attachments
Dialog screenshot (30.04 KB, image/png)
2012-05-28 03:13 UTC, theirix
Details
Crash dump (73.01 KB, text/plain)
2012-05-28 03:14 UTC, theirix
Details
the dialog with the wrong message (24.81 KB, image/png)
2012-11-19 19:57 UTC, Jérôme
Details
Failed update dialog in German LibreOffice Writer v3.6.3.2 (Build ID: 58f22d5) (16.64 KB, image/png)
2012-11-24 14:13 UTC, martin-20121124-libreoffice
Details
Screenshot (1.30 MB, image/png)
2013-12-24 17:21 UTC, KinG-InFeT
Details
Backtrace obtained as described by Christian Schroeder on 141209, first post. (37.43 KB, text/plain)
2014-12-10 00:48 UTC, Christian Schroeder
Details

Note You need to log in before you can comment on or make changes to this bug.
Description theirix 2012-05-28 03:13:01 UTC
Created attachment 62160 [details]
Dialog screenshot

Problem description:
Check for Updates menu leads to an unusable dialog.

Steps to reproduce:
1. Launch OpenOffice Text
2. Choose Help -> Check for Updates…

Current behavior:
Shows a weird template dialog with %PERCENT% labels and no further progress.
Icon in menubar appears but it's unclickable.
Pause, Resume, Cancel buttons unclickable. Download button crashes an app (dump attached).

Expected behavior:
Something more related to an update mechanism.

Platform (if different from the browser): 
              
Browser: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_7_4) AppleWebKit/536.10.3 (KHTML, like Gecko) Version/5.2 Safari/536.10.3
Comment 1 theirix 2012-05-28 03:14:43 UTC
Created attachment 62161 [details]
Crash dump
Comment 2 Roman Eisele 2012-05-29 09:14:32 UTC
Thank you very much for your bug report!

NOT REPRODUCIBLE with
* LibreOffice 3.5.3.2 (Build ID: 235ab8a-3802056-4a8fed3-2d66ea8-e241b8)
or
* LibreOffice 3.5.4.2 (Build-ID: 165a79a-7059095-e13bb37-fef39a4-9503d18)
, both with German langpack installed, on MacOS X 10.6.8 German.

For me, the "Check for Updates" dialog works fine; even if there is no network connection, I get a reasonable error message.

But this could just mean that the problem depends on some other variables I am not aware of -- e.g., on the MacOS version. Could someone else please test on MacOS X 10.7.x?

@theirix@gmail.com:
Which langpack do you have installed, i.e. which language you use for the user interface of LibreOffice?
Comment 3 theirix 2012-05-29 09:27:46 UTC
My version is:
US, LibreOffice 3.5.3.2 
Build ID: 235ab8a-3802056-4a8fed3-2d66ea8-e241b80
OS X: 10.7.4

Just checked for updates – it works as expected.
Checking for updates failed only once so it can be non-reproducible. There was a working internet connection. Unfortunately I don't remember how exactly libreoffice was updated last time – from a dialog or from an archive.
Comment 4 Julien Nabet 2012-05-29 13:55:31 UTC
Since :
- you can't reproduce
- Roman doesn't reproduce the problem
- it happened only once
=> I update the status to RESOLVED/WORKSFORME.

Don't hesitate to reopen this tracker if you encounter this problem again.
Comment 5 Jérôme 2012-11-19 19:56:43 UTC
On Linux x86_64.
Comment 6 Jérôme 2012-11-19 19:57:56 UTC
Created attachment 70277 [details]
the dialog with the wrong message
Comment 7 Jérôme 2012-11-19 20:01:31 UTC
The bug appears with 3.5.7.2 Linux release on x86_64.

Version ID : 3215f89-f603614-ab984f2-7348103-1225a5b
Comment 8 Roman Eisele 2012-11-20 07:32:33 UTC
So this is a cross-platform issue now (originally reported for Mac OS X, now reproduced by Jérôme on Linux).
Comment 9 martin-20121124-libreoffice 2012-11-24 14:12:11 UTC
This bug (see also attached new screenshot) also today appeared 
- directly after updating from v3.6.2
- with LibreOffice Writer v3.6.3.2 (Build ID: 58f22d5)
- having started it first time
- on Windows 7 (SP 1) 64 Bit, both German language version.

The second and following calls of update menu item then worked fine.

So it might be related to having a fresh update?
Comment 10 martin-20121124-libreoffice 2012-11-24 14:13:48 UTC
Created attachment 70514 [details]
Failed update dialog in German LibreOffice Writer v3.6.3.2 (Build ID: 58f22d5)
Comment 11 Roman Eisele 2012-11-25 16:33:31 UTC
@ Martin:
Thank you very much for your additional testing!

However, please do not “update” the Version field ;-) Our usage is that the Version field should always contain the *first* version which is known to contain the bug, and not the last/newest one. Thank you for your understanding!
Comment 12 martin-20121124-libreoffice 2012-11-25 17:55:21 UTC
@Roman

Oops. Thanks for both correction and explanation!
Comment 13 ign_christian 2013-06-20 14:38:02 UTC
Not reproducible on LO 4.0.4.2 (Win7 Home Premium 32bit)
Comment 14 Adolfo Jayme Barrientos 2013-12-23 04:25:27 UTC
*** Bug 72259 has been marked as a duplicate of this bug. ***
Comment 15 Joel Madero 2013-12-23 04:48:01 UTC
REOPENED is also incorrect, updating to UNCONFIRMED unless we can get specific steps which will consistently result in the issue. Reopened means that it was "fixed" and the fix didn't work right.
Comment 16 retired 2013-12-23 12:07:25 UTC
This has been working perfectly fine for me with LO 4.2.0.1 and also been reported to be working by another user: https://bugs.freedesktop.org/show_bug.cgi?id=72970

Can anybody please check if this issue persists with 4.2.0.1 http://www.libreoffice.org/download/pre-releases/ since it looks fixed from what I see.

Setting to NEEDINFO until another user can confirm this is indeed working fine with 4.2.0.1.

After providing the requested info, please but this bug to UNCONFIRMED if the problem persists or WORKSFORME if it works indeed for you as well. Thanks :)
Comment 17 KinG-InFeT 2013-12-24 17:21:54 UTC
Created attachment 91177 [details]
Screenshot
Comment 18 KinG-InFeT 2013-12-24 17:22:48 UTC
Other tests on Windows 7 Professional 32-bit

Libreoffice: Version: 4.1.4.2
Build ID: 0a0440ccc0227ad9829de5f46be37cfb6edcf72
Comment 19 Robinson Tryon (qubit) 2013-12-24 17:42:44 UTC
(In reply to comment #17)
> Created attachment 91177 [details]
> Screenshot

KinG - Any special repro steps?

Could you please try to repro on 4.2.0.1?
https://www.libreoffice.org/download/pre-releases/
Comment 20 KinG-InFeT 2013-12-24 18:59:15 UTC
(In reply to comment #19)
> (In reply to comment #17)
> > Created attachment 91177 [details]
> > Screenshot
> 
> KinG - Any special repro steps?
> 
> Could you please try to repro on 4.2.0.1?
> https://www.libreoffice.org/download/pre-releases/

i try 
Versione: 4.2.0.1
Build ID: 7bf567613a536ded11709b952950c9e8f7181a4a

and not show this bug... fixed in 4.2.0.1 ?
Comment 21 Robinson Tryon (qubit) 2013-12-24 19:18:30 UTC
(In reply to comment #20)
> i try 
> Versione: 4.2.0.1
> Build ID: 7bf567613a536ded11709b952950c9e8f7181a4a
> 
> and not show this bug... fixed in 4.2.0.1 ?

Sounds promising! It's possible that there's slightly different behavior for release builds vs. RC's, but we can re-test when 4.2 is released at the end of January:
https://wiki.documentfoundation.org/ReleasePlan#4.2_release

KinG - I'll mark this as 'RESOLVED WORKSFORME' for the time being; if the 4.2 release does *not* fix the problem, please change the status back to 'NEW' and we'll investigate further.
Comment 22 Adolfo Jayme Barrientos 2014-09-03 04:13:15 UTC
*** Bug 83407 has been marked as a duplicate of this bug. ***
Comment 23 retired 2014-09-03 11:38:30 UTC
So we have varying experiences. Do we have a reproducible case? Latest dupe was for 4.3.0.4 but we're at 4.3.1.2. Can anybody reproduce this with the latest release?
Comment 24 Christian Schroeder 2014-09-05 16:49:37 UTC
I installed 4.3.1.2 freshly on an old xp virtual machine; this machine had not had LibreOffice installed on it ever. The bug did not appear after the install and first check for updates. I then reinstalled 4.3.1.2 using the "repair" option and checked for updates again. The bug did not appear. 

A negative result, but a result nonetheless. I will post additional information as it is made available.
Comment 25 Jean-Baptiste Faure 2014-10-05 17:33:53 UTC
I just installed version 4.2.6-secfix in place of my own build of 4.2 branch. I tried the update check just after the first launch and it worked as expected. Subsequent checks for update work as expected too.

Tested on Ubuntu 14.04 x86-64

Best regards. JBF
Comment 26 tommy27 2014-10-06 08:14:32 UTC
ok let's mark this a RESOLVED WORKSFORME
feel free to change the status to NEW if anybody is able to reproduce it again with new LibO releases.
Comment 27 ign_christian 2014-10-15 08:02:24 UTC
*** Bug 85033 has been marked as a duplicate of this bug. ***
Comment 28 Christian Schroeder 2014-11-30 20:07:56 UTC
I just installed 4.3.4.1 on a Windows 7 machine and an old XP machine. The bug has reappeared for me.
Comment 29 tommy27 2014-11-30 20:34:05 UTC
(In reply to Christian Schroeder from comment #28)
> I just installed 4.3.4.1 on a Windows 7 machine and an old XP machine. The
> bug has reappeared for me.

please give more details... 
did you install 4.3.4.1 over a pre-existing installation? which was that version?
are you experiencing the exact issue of the original reporter (see comment 0)?
Comment 30 Christian Schroeder 2014-11-30 20:46:16 UTC
From what I can see, it certainly appears to be the same issue. I cannot verify that I can't click the buttons; I didn't try. My issue appears only once per installation, at the very first update check. I hence won't be able to try again until I get another version. I almost always install over an old version; I've done this time and again. If I had to guess (I now can't recall with 100% certainty), I installed over 4.3.2 this time around though, again, it's appeared almost every time I've installed over older versions, regardless of version. There's a nagging thought in my head, though, that the bug DIDN'T appear when I installed 4.3.2. I'm sorry that I can't be more certain. All the screenshots which are attached I've inspected; they all seem to present a similar problem to what I'm experiencing.
Comment 31 tommy27 2014-11-30 20:49:43 UTC
thanks 4 feedback
I revert status to NEW
Comment 32 Christian Schroeder 2014-12-01 18:28:22 UTC
OK, so within a VirtualBox XP virtual machine (it's what I have) on a windows 7 host, I cleanly installed 4.3.2.2, typical install. I didn't create a desktop start link. Libreoffice had never been installed on this machine. After this installation, I immediately installed the requisite US English help pack. I then opened writer, let it go through its initial motions and allowed the writer window to appear. I executed "Check for Updates" which worked as expected, advising me that there was a new version of Libreoffice. I then closed all the applications and rebooted. After this, I installed 4.3.4.1 over top of 4.3.2.2, same settings as previous install, but now also specifying not to start Libreoffice at startup; this option was not available in the first install. I installed the requisite help pack, same type. I again opened writer, letting it go through its motions. At the earliest opportunity, I executed another "Check for Updates", at which time the %PERCENT% bug revealed itself. Even better(!), when I went to test the activity of the buttons in the dialog --- I hit "Download", I believe --- Libreoffice crashed! I was presented with the standard crash recovery dialog.

After doing these things once, I deleted the virtual machine image and re-imported it so as to bring me back to step #1 exactly. I went through the motions again and reproduced the error exactly a second time.

I hope this information helps.
Comment 33 Christian Schroeder 2014-12-01 18:59:52 UTC
I tried the above one more time, doing the exact same things except not changing any of the default installer options and NOT installing the help packs. The bug reappears reliably in my VM, as does the crash.
Comment 34 Robinson Tryon (qubit) 2014-12-02 12:37:50 UTC
(In reply to Christian Schroeder from comment #33)
> The bug reappears reliably in my VM, as does the crash.

If LO is crashing, then we can get a backtrace from that and help the devs to narrow-in on what precisely is failing. We've got some great instructions about WinDbg debugging on the wiki:
https://wiki.documentfoundation.org/How_to_get_a_backtrace_with_WinDbg
Comment 35 Christian Schroeder 2014-12-10 00:46:40 UTC
OK, I've done the best I can.

I've uploaded the file "backtrace 14120900.txt". I need to provide some context, though.

I've got the pre-crash state snapshotted in my VM, so I can test again and again with reasonable speed. I can reproduce the %PERCENT% error state (and the subsequent crash with the required additional pressing of "Download") again and again up until I attach to the soffice.bin process. That is, I can have WinDbg running but unattached, and reliably produce both the %PERCENT% and the crash. If I attach to the process immediately after starting LO, however, then WinDbg seems to hang for quite a few moments on line 148: "(8b4.ae4): Break instruction exception - code 80000003 (first chance)". Only after a few moments does WinDbg advance to the remainder:

eax=7ffdf000 ebx=00000001 ecx=00000002 edx=00000003 esi=00000004 edi=00000005
eip=7c90120e esp=0dadffcc ebp=0dadfff4 iopl=0         nv up ei pl zr na pe nc
cs=001b  ss=0023  ds=0023  es=0023  fs=0038  gs=0000             efl=00000246
ntdll!DbgBreakPoint:
7c90120e cc              int     3

After it's gone to this point and I start debugging, LO will NOT produce the %PERCENT% error and, consequently, I cannot reproduce the crash. More detail:

Route 1:

1) I start WinDbg;
2) I start LO;
3) In LO, I attempt to check for updates; %PERCENT% appears and I can cause the crash.

Route 2:

1) I start WinDbg;
2) I start LO;
3) I attach to soffice.bin;
4) I wait as I mentioned above; 
5) After I see "int    3", I hit F5;
6) I check for updates;
7) LO does nothing remarkable; everything seems to work fine.

In order to obtain my backtrace file, then, I did the following:

1) I start WinDbg;
2) I start LO;
3) In LO, I attempt to check for updates; %PERCENT% appears;
4) I attach WinDbg to soffice.bin; I wait;
5) After I see "int    3", I hit F5;
6) I press "Download", the crash occurs, and I proceed with the exception analysis.

Please let me know if you have any further questions.
Comment 36 Christian Schroeder 2014-12-10 00:48:11 UTC
Created attachment 110658 [details]
Backtrace obtained as described by Christian Schroeder on 141209, first post.
Comment 37 Christian Schroeder 2015-01-16 19:47:51 UTC
I can confirm that the bug continues to exist after installing 4.3.5.2 on both XP and 7.
Comment 38 Christian Schroeder 2015-05-27 20:07:57 UTC
I installed 4.4.3.2 today. On XP, going to check for updates hung LO --- that's a new one! LO had to do a document recovery after I killed it --- and the %PERCENT% bug again appeared as previously described in 7. In both cases checking for updates subsequently worked just fine.
Comment 39 tommy27 2015-06-02 08:10:12 UTC
*** Bug 83407 has been marked as a duplicate of this bug. ***
Comment 40 Christian Schroeder 2015-07-18 18:14:18 UTC
Installed 4.4.4.3. On an old XP machine, the bug persists. I didn't see it on my 7/64 machines.
Comment 41 Christian Schroeder 2015-09-11 15:06:54 UTC
Installed 5.0.1.2 on two windows 7 machines. Bug appeared on both these installations. Could not test xp machine as the updates window won't open.
Comment 42 Julien Nabet 2015-09-12 06:26:59 UTC
(In reply to Christian Schroeder from comment #41)
> Installed 5.0.1.2 on two windows 7 machines. Bug appeared on both these
> installations. Could not test xp machine as the updates window won't open.

Which bug? the crash or the %PERCENT%?
Was it with a brand new LO profile (see https://wiki.documentfoundation.org/UserProfile#Windows)?

On pc Debian x86-64 with master sources updated today, I don't reproduce this.
Comment 43 Christian Schroeder 2015-09-12 13:51:42 UTC
Sorry; the %PERCENT% problem. This was with an install over top of a version 4 install.
Comment 44 John Franklin 2015-09-22 03:52:37 UTC
Template dialog also observed on Mac OS X 10.8.5, LibreOffice 5.0.1.2 (Build ID: 81898c9f5c0d43f3473ba111d7b351050be20261)  Did not try to crash LO.

This was installed over a 4.x version.
Comment 45 Julien Nabet 2016-01-26 19:51:00 UTC
*** Bug 97377 has been marked as a duplicate of this bug. ***
Comment 46 Adolfo Jayme Barrientos 2016-11-27 19:08:29 UTC
*** Bug 104200 has been marked as a duplicate of this bug. ***
Comment 47 Adolfo Jayme Barrientos 2017-03-09 15:25:26 UTC
*** Bug 106392 has been marked as a duplicate of this bug. ***
Comment 48 jhertel 2017-03-22 12:30:24 UTC
Just happened to me in LibreOffice 5.2.6.2, US English user interface, Windows 10 (build 14393.953), right after installing it over a 5.2.5 installation.

When I tried a second time, the dialog worked perfectly.
Comment 49 martin-20121124-libreoffice 2017-03-22 13:18:25 UTC Comment hidden (no-value)
Comment 50 Christian Schroeder 2017-03-22 22:44:09 UTC
It was suggested to me that I delete my LO profile the next time I installed an update. The last time I installed an update --- I don't remember between which versions --- I uninstalled the old version AND deleted my profile. I then installed the newer LO version, and I haven't seen this bug since. It may well be that this bug is solved but that it persists for some users through some quirk in the profile. I wonder also if it isn't a problem that exists as a result of another bug, but that the correlation hasn't been definitively established. If the latter is the case, then if the root problem is fixed, one will never know definitively that the offshoot is fixed, too. 

These are just my thoughts. I agree that it is unsatisfying that this bug should continue to rear its head, regardless of cause.
Comment 51 Christian Schroeder 2017-03-25 15:04:29 UTC
Well, not even a week since I posted my last comment, %PERCENT% appeared. I had just upgraded from 5.3.0.3 to 5.3.1 64 bit (on top of 64 bit) on a windows 7 machine. Still exists.
Comment 52 ldmpub@gmail.com 2017-03-26 11:03:56 UTC
Confirmed today when upgrading to LibreOffice_5.2.6_Win_x86 under Windows 10 64bit:
=> first version check after update returns "%PERCENT%".
Comment 53 csaba_22 2017-07-16 08:17:12 UTC
Happened to me with Calc.

Version: 5.3.4.2
Build ID: f82d347ccc0be322489bf7da61d7e4ad13fe2ff3
CPU Threads: 4; OS Version: Windows 6.1; UI Render: GL; Layout Engine: new; 
Locale: en-GB (en_GB); Calc: group

Cancel doesn't work.
Close does.
Comment 54 Aron Budea 2018-05-19 20:21:11 UTC
*** Bug 117699 has been marked as a duplicate of this bug. ***
Comment 55 skierpage 2018-05-20 00:49:05 UTC
As I mention in the duplicate bug 117699, this happened to me after I updated from 6.0.2 to 6.0.4 on Windows 10. Same as comment 32, during 6.0.4.2 setup I specified not to start LibreOffice at startup. I ran LibreOffice "hub" (not Writer, Calc, etc.), immediately Help > Check for Updates, and got the garbled dialog; thereafter it worked in all the applications. Hope this helps.
Comment 56 QA Administrators 2019-05-21 02:53:52 UTC Comment hidden (obsolete)
Comment 57 ldmpub@gmail.com 2019-05-21 08:00:47 UTC
Checked now and this bug is still accurate in LibreOffice Version: 6.2.3.2 (x64)


To reproduced:
1. launch an "old LO" and check for update
2. download last install binaries and install LO
3. launch updated LO then check for update => buggy dialog with "%PERCENT%" is displayed ;-(.

See you in one year?
Comment 58 Julien Nabet 2019-05-21 08:15:52 UTC
Xisco: thought you might be interested in this one.
It's a long standing bug that some may reproduce others no.

Here's code pointer to start with:
https://opengrok.libreoffice.org/search?project=core&full=RID_UPDATE_STR_PERCENT&defs=&refs=&path=&hist=&type=&si=full
Comment 59 ldmpub@gmail.com 2019-05-21 08:21:34 UTC
Personnaly I can reproduce this bug but it only occurs on the first update check after LO update (it doesn't occurs on the 2d "version verification" from menu "Help > Check Update").
Comment 60 Julien Nabet 2019-07-21 20:15:02 UTC
Adolfo: I noticed 2 locations in Pootle where RID_UPDATE_STR_PERCENT (msgid="%PERCENT%") is translated by "%PERCENT %".
See https://translations.documentfoundation.org/es/libo_ui/translate/#filter=checks&category=critical&unit=137277006&offset=0
Is it expected?
Comment 61 Timo 2019-12-15 11:37:44 UTC
*** Bug 118787 has been marked as a duplicate of this bug. ***
Comment 62 Lucas J 2021-09-26 04:30:09 UTC
Can confirm using:
Version: 7.2.1.2 (x64) / LibreOffice Community
Build ID: 87b77fad49947c1441b67c559c339af8f3517e22
CPU threads: 4; OS: Windows 10.0 Build 19042; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded

***For me, it goes away after second attempt of checking for updates.***
Comment 63 Caolán McNamara 2021-09-26 15:23:31 UTC
(In reply to Julien Nabet from comment #60)
> Adolfo: I noticed 2 locations in Pootle where RID_UPDATE_STR_PERCENT
> (msgid="%PERCENT%") is translated by "%PERCENT %".

FWIW it looks to me that the "%PERCENT" part is intended to be replaced at runtime by a number so for the English case %PERCENT% becomes e.g. "50%" which is correct as there isn't a space between number and % in English locales, while its common in other locales to display "50 %" so the above translation is probably good.

It looks pretty fragile to me to expect translators to get this right from so little context, include/i18nutil/unicode.hxx has "formatPercent" which looks a more sensible way to just format this percentage according to a locales rules. I suggest removing that RID_UPDATE_STR_PERCENT translation and use formatPercent instead.

Presumably though the crashing/handing issue is unrelated to the unsightly %PERCENT% label
Comment 64 Commit Notification 2021-09-26 17:28:40 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/501929557800e400c9ee07d25687ee60354d74c2

tdf#50421: use substVariables for remaining %PERCENT% in "Check for Updates"

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 65 Julien Nabet 2021-09-27 18:32:17 UTC
Cherry-pick waiting for review for 7.2 branch here:
https://gerrit.libreoffice.org/c/core/+/122733
Comment 66 Commit Notification 2021-09-28 12:10:17 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/140fa0023eec1b8bfcd68394c4395a473c666057

tdf#50421: use substVariables for remaining %PERCENT% in "Check for Updates"

It will be available in 7.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.