tdf#50421: use substVariables for remaining %PERCENT% in "Check for Updates"

Change-Id: I9e1094ef9a957ca1524367f985f37ffc0da5b353
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/122621
Tested-by: Jenkins
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>